fix for cropped rubric manager when it is launch from assignment activity tool

--- a/styles.css
+++ b/styles.css
@@ -386,6 +386,10 @@ iframe html{background:none;}
     left: -116px;
 }
 
+.modal-dialog-scrollable {
+    display: block !important;
+} 
+
 .turnitin_setup_download_links label {
     width: 300px;
     line-height: 50px;
